--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -87,7 +87,7 @@
                 <div class="col-md-3">
                     <div class="card mb-4 product-wap hoverZoom rounded-0">
                         <div class="card rounded-0">
-                            <img class="card-img rounded-0 img-fluid squireImg" src="./<%= val.image[0] %>">
+                            <img class="card-img rounded-0 img-fluid squireImg" src="/productimage/thumb/<%= val.image[0] %>">
                             <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                                 <ul class="list-unstyled">
                                     <% if(login==true){ %>
